# Resummation-of-Heisenberg-Euler-Lagrangian

Electric/1_5k_mom_1_5kdig/Constants/: Constant.txt  constant.cpp
Electric/1_5k_mom_1_5kdig/first/: first.cpp
Electric/1_5k_mom_1_5kdig/fourth/: fourth.cpp
Electric/1_5k_mom_1_5kdig/function/: function.cpp
Electric/1_5k_mom_1_5kdig/results/: .disectres.txt.swn  FIFTH.txt  FIRST.txt  FOURTH.txt  SECOND.txt  SIXTH.txt  THIRD.txt  disectres.txt  result.cpp
Electric/1_5k_mom_1_5kdig/second/: second.cpp
Electric/1_5k_mom_1_5kdig/sixth/: run.sh  sixth.cpp
Electric/1_5k_mom_1_5kdig/third/: third.cpp
Electric/1k_mom_1kdig/Constants/: Constant.txt  constant.cpp
Electric/1k_mom_1kdig/first/: first.cpp
Electric/1k_mom_1kdig/fourth/: fourth.cpp
Electric/1k_mom_1kdig/function/: function.cpp
Electric/1k_mom_1kdig/results/: FIFTH.txt  FIRST.txt  FOURTH.txt  SECOND.txt  SIXTH.txt  THIRD.txt  disectres.txt  result.cpp
Electric/1k_mom_1kdig/second/: second.cpp
Electric/1k_mom_1kdig/sixth/: sixth.cpp
Electric/1k_mom_1kdig/third/: third.cpp
Electric/2h_mom_3kdig/Constants/: Constant.txt  constant.cpp  run.sh
Electric/2h_mom_3kdig/first/: first.cpp
Electric/2h_mom_3kdig/fourth/: fourth.cpp
Electric/2h_mom_3kdig/function/: function.cpp
Electric/2h_mom_3kdig/results/: .disectres.txt.swm  .disectres.txt.swo  FIFTH.txt  FIRST.txt  FOURTH.txt  SECOND.txt  SIXTH.txt  THIRD.txt  disectres.txt  mpfr.sh  result.cpp  run.sh
Electric/2h_mom_3kdig/second/: second.cpp
Electric/2h_mom_3kdig/sixth/: mpfr.sh  sixth.cpp
Electric/2h_mom_3kdig/third/: third.cpp
Electric/2k_mom_2kdig/Constants/: constant.cpp
Electric/2k_mom_2kdig/first/: first.cpp  run.sh
Electric/2k_mom_2kdig/fourth/: CMakeLists.txt  fourth.cpp
Electric/2k_mom_2kdig/function/: function.cpp
Electric/2k_mom_2kdig/second/: second.cpp
Electric/2k_mom_2kdig/sixth/: CMakeLists.txt  sixth.cpp
Electric/2k_mom_2kdig/third/: third.cpp
Electric/5h_mom_550dig/Constants/: Constant.txt  constant.cpp
Electric/5h_mom_550dig/first/: first.cpp
Electric/5h_mom_550dig/fourth/: fourth.cpp
Electric/5h_mom_550dig/function/: function.cpp  run.sh
Electric/5h_mom_550dig/results/: FIFTH.txt  FIRST.txt  FOURTH.txt  SECOND.txt  SIXTH.txt  THIRD.txt  disectres.txt
Electric/5h_mom_550dig/second/: second.cpp
Electric/5h_mom_550dig/sixth/: sixth.cpp
Electric/5h_mom_550dig/third/: mpfr.sh  third.cpp
Electric/Delta/: .delta_100.txt.swn  .delta_100.txt.swo  .delta_100.txt.swp  .delta_60.txt.swp  delta.cpp  run.sh
Electric/Delta/results/: delta_19.txt  delta_24.txt  delta_29.txt  delta_34.txt  delta_39.txt  delta_49.txt
Electric/Pade_1k/Constants/: .Constant_neg.txt.swp  Constant.txt  constant.cpp
Electric/Pade_1k/pade_proper/: .pade.txt.swj  CMakeLists.txt  pade.cpp  pade.txt
Electric/construct_P/0_1_5k_P_block/: LU.cpp
Electric/construct_P/0_1k_P_block/: CMakeLists.txt  LU.cpp  run.sh
Electric/construct_P/0_200_P_block/: .compile.job.swp  LU.cpp
Electric/construct_P/0_2k_P_block/: LU.cpp  run.sh
Electric/moments/: moments.cpp  run.sh
Magnetic/1_5k_mom_1kdig/Constants/: CMakeLists.txt  constant.cpp
Magnetic/1_5k_mom_1kdig/first/: first.cpp
Magnetic/1_5k_mom_1kdig/fourth/: fourth.cpp
Magnetic/1_5k_mom_1kdig/function/: function.cpp  run.sh
Magnetic/1_5k_mom_1kdig/results/: CMakeLists.txt  FIFTH.txt  FIRST.txt  FOURTH.txt  SECOND.txt  THIRD.txt  disectres.txt
Magnetic/1_5k_mom_1kdig/second/: second.cpp
Magnetic/1_5k_mom_1kdig/third/: third.cpp
Magnetic/1h_mom_130dig/Constants/: Constant.txt  (+2 more)
Magnetic/1h_mom_130dig/function/: CMakeLists.txt  function.cpp
Magnetic/2k_mom_2kdig/third/: CMakeLists.txt  third.cpp
Magnetic/Delta/: .compile.job.swp  .together.job.swp  CMakeLists.txt  delta.cpp  run.sh
Magnetic/moments/: CMakeLists.txt  moments.cpp
(+139 files in other folders)
